--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   db:
     image: postgres:15
@@ -7,16 +5,16 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-todo_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-todo_pass}
+      POSTGRES_DB: ${POSTGRES_DB:-todo_db}
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
-      interval: 10s
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-todo_user} -d ${POSTGRES_DB:-todo_db}"]
+      interval: 1s
       timeout: 5s
-      retries: 5
+      retries: 100
     ports:
       - "5432:5432"
 
@@ -27,9 +25,9 @@ services:
         condition: service_healthy
     volumes:
       - ./migrations:/migrations
-    entrypoint: ["migrate", "-path", "/migrations", "-database", "${DATABASE_URL}", "up"]
+    entrypoint: ["migrate", "-path", "/migrations", "-database", "${DATABASE_URL:-postgresql://todo_user:todo_pass@db:5432/todo_db}", "up"]
     environment:
-      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL: ${DATABASE_URL:-postgresql://todo_user:todo_pass@db:5432/todo_db}
     restart: "no"
 
   backend:
@@ -41,12 +39,10 @@ services:
     env_file:
       - .env
     environment:
-      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL: ${DATABASE_URL:-postgresql://todo_user:todo_pass@db:5432/todo_db}
       PORT: 8080
     ports:
       - "8080:8080"
-    volumes:
-      - ./backend:/app
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/api/health"]
       interval: 10s
