Enhance Docker setup and documentation for development and production environments

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,6 @@
-FROM golang:1.24-alpine AS builder
+FROM golang:1.25-alpine AS basic
+
+FROM basic AS builder
 
 WORKDIR /src
 COPY go.mod go.sum ./
@@ -7,7 +9,15 @@ RUN go mod download
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -o backend ./main.go
 
-FROM alpine:3.18
+# Dev stage for live reloading with Air
+FROM basic AS dev
+WORKDIR /src
+RUN go install github.com/air-verse/air@latest
+EXPOSE 8080
+CMD ["air"]
+
+# Deploy stage (production)
+FROM alpine:3.18 AS deploy
 RUN apk add --no-cache ca-certificates
 WORKDIR /app
 COPY --from=builder /src/backend /app/backend
