--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-todo_user} -d ${POSTGRES_DB:-todo_db}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-todo_user} -d ${POSTGRES_DB:-todo_db}" ]
       interval: 1s
       timeout: 5s
       retries: 100
@@ -25,7 +25,7 @@ services:
         condition: service_healthy
     volumes:
       - ./migrations:/migrations
-    entrypoint: ["migrate", "-path", "/migrations", "-database", "${DATABASE_URL:-postgresql://todo_user:todo_pass@db:5432/todo_db}", "up"]
+    entrypoint: [ "migrate", "-path", "/migrations", "-database", "${DATABASE_URL:-postgresql://todo_user:todo_pass@db:5432/todo_db}", "up" ]
     environment:
       DATABASE_URL: ${DATABASE_URL:-postgresql://todo_user:todo_pass@db:5432/todo_db}
     restart: "no"
@@ -35,7 +35,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     env_file:
       - .env
     environment:
@@ -44,11 +45,11 @@ services:
     ports:
       - "8080:8080"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/api/health"]
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/api/health" ]
       interval: 10s
       timeout: 5s
       retries: 5
-    command: ["/app/backend"]
+    restart: always
 
   frontend:
     build:
