Add body field to todos and enhance frontend drag-and-drop functionality

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,15 @@
 services:
   backend:
+    image: todolist-app-backend-dev
     build:
       target: dev
     volumes:
       - ./backend:/src
+  frontend:
+    image: todolist-app-frontend-dev
+    ports:
+      - "3000:5173"
+    build:
+      target: dev
+    volumes:
+      - ./frontend:/app
