--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,19 +55,9 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    depends_on:
-      - backend
     environment:
       VITE_API_BASE: "http://localhost:8080"
-    ports:
-      - "3000:80"
-    volumes:
-      - ./frontend:/app
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
+    restart: always
 
 volumes:
   pgdata:
