--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,17 @@ RUN npm ci
 COPY . .
 RUN npm run build
 
+# Development stage
+FROM node:20-alpine AS dev
+WORKDIR /app
+COPY package.json package-lock.json* ./
+RUN npm ci
+COPY . .
+EXPOSE 5173
+CMD ["npm", "run", "dev", "--", "--host"]
+
 # Production stage: serve with nginx
-FROM nginx:stable-alpine AS runner
+FROM nginx:stable-alpine AS deploy
 COPY --from=builder /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
